--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".AccountsActivity" />
+        <activity android:name=".CalendarActivity" />
+        <activity android:name=".ProfileActivity" />
+        <activity android:name=".RewardsActivity" />
+        <activity android:name=".StatsActivity" />
+        <activity android:name=".SavingsActivity" />
     </application>
 
 </manifest>
